--- a/src/style.scss
+++ b/src/style.scss
@@ -22,32 +22,36 @@ img {
 }
 
 .header {
-    width: 100vw;
+    width: 95vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 1vh 0;
+    padding: 1vh 2.5vw;
     background: #3855c9;
+
+    &--title {
+        text-align: right;
+    }
     
     h3 {
         margin: 10px 0;
     }
-    
 }
 
 .app--homepage {
-    width: 60vw;
+    width: 75vw;
     height: 75vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     button {
-        width: 350px;
+        margin-top: 1rem;
+        width: 300px;
     }
     h1{
-        font-size: 3rem;
-    }
-}
+        font-size: 2.5rem;
+    }}
 
 .homepage{
     width: 80vw;
@@ -81,17 +85,31 @@ img {
 }
 
 .user {
-    width: 80%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &--title {
+        align-self: flex-start;
+    }
+    
+    form {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 
     input {
         border-radius: 10px;
-        padding: 10px 20px;
-        margin: 0 40px 0 100px;
+        padding: 5px 20px;
+        margin: 0 40px;
         width: 150px;
         font-size: 1rem;
     }
 
     button {
+        margin: 1rem;
         h3 {
             margin: 5px;
         }
