--- a/src/style.scss
+++ b/src/style.scss
@@ -164,6 +164,9 @@ img {
     flex-direction: column;
     align-items: center;
     &--buttons{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
         button{
             width: 180px ;
             margin: 30px 10px;
